--- a/smartd.conf
+++ b/smartd.conf
@@ -1,2 +1,1 @@
-DEVICESCAN -m ${MAIL} -M test
-DEVICESCAN -H -n standby -m ${MAIL} -M daily
+DEVICESCAN -a -s (S/../../7/13|L/../15/./15) -W 0,0,42 -m ${MAIL} -M test -M daily
