--- a/smartd.conf
+++ b/smartd.conf
@@ -1,1 +1,1 @@
-DEVICESCAN -a -s (S/../../7/13|L/../15/./15) -W 0,0,42 -m ${MAIL} -M test -M daily
+DEVICESCAN -a -s (S/../../7/13|L/../15/./15) -W 0,0,42 -m ${MAIL} -M test -M daily -H
