--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          provenance: false
           tags: |
             ${{ github.repository }}:${{ env.tag }}
             ghcr.io/${{ github.repository }}:${{ env.tag }}
