--- a/ssmtp.conf
+++ b/ssmtp.conf
@@ -13,14 +13,14 @@ mailhub=mail
 #rewriteDomain=
 
 # The full hostname
-hostname=plexcube.higgins
+hostname=host.name
 
 # Are users allowed to set their own From: address?
 # YES - Allow the user to specify their own From: address
 # NO - Use the system generated From: address
 #FromLineOverride=YES
-mailhub=${SMTP}
-AuthUser=${MAILFROM}
-AuthPass=${MAILPASS}
+mailhub=
+AuthUser=
+AuthPass=
 UseTLS=YES
 UseSTARTTLS=YES
