--- a/smartd.conf
+++ b/smartd.conf
@@ -1,1 +1,9 @@
-DEVICESCAN -a -s (S/../../7/13|L/../15/./15) -W 0,0,42 -m ${MAIL} -M test -M daily -H
+#Example to check HDDs for maximum temp of 46C with short scans weekly (Sun @ 0400) and long scans monthly (15th of month @0500)
+DEFAULT -a -s (S/../../7/04|L/../15/./05) -W 0,0,46 -m email@email.com -M daily -H
+/dev/sda
+#...
+/dev/sdz
+
+#Example to check SSD for maximum temp of 46C with short scans weekly (Sun @ 0400) and long scans monthly (15th of month @0500); includes a test email when starting
+DEFAULT -a -s (S/../../7/04|L/../15/./05) -W 0,0,70 -m email@email.com -M test -M daily -H
+/dev/nvme0
